Replaced deque with List. Deque seems to be a 6.0 feature.
git-svn-id: svn://localhost/tmp/s2g/colossus.svn/trunk@3888 c5679a2a-0e0e-0410-bba2-8642b794b8c1